Login fixed added css

--- a/bugTracker/src/main/resources/templates/admin.html
+++ b/bugTracker/src/main/resources/templates/admin.html
@@ -5,7 +5,18 @@
     <title></title>
 </head>
 <body>
-<h1>this is bugtracker Admin</h1>
+<h1>This is bugtracker Admin</h1>
+<br>
+<h3> Add a user </h3>
+<form action="/adduser">
+    <label for="userName">Name:</label><br>
+    <input type="text" id="userName" name="userName"><br>
+    <label for="userPassword">Password :</label><br>
+    <input type="text" id="userPassword" name="userPassword"><br>
+    <label for="userType">Type:</label><br>
+    <input type="text" id="userType" name="userType"><br>
+    <input type="submit" value="Add User">
+</form>
 
 </body>
 </html>
