--- a/bugTracker/src/main/resources/templates/login.html
+++ b/bugTracker/src/main/resources/templates/login.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Login page</title>
-</head>
-<body>
-<h1>Welcome to BugTracker</h1>
-<p th:if="${loginError}" class="error">Wrong user or password</p>
-<form th:action="@{/login.html}" method="post">
-    <label for="username">Username</label>:
-    <input type="text" id="username" name="username" autofocus="autofocus" /> <br />
-    <label for="password">Password</label>:
-    <input type="password" id="password" name="password" /> <br />
-    <input type="submit" value="Log in" />
-</form>
-</body>
+<div class="login">
+    <div class="heading">
+
+        <head>
+            <link href="bug.css" rel="stylesheet"/>
+            <title>Login</title>
+        </head>
+
+        <body>
+        <h1>Welcome to BugTracker</h1>
+        <p th:if="${loginError}" class="error">Wrong user or password</p>
+        <form th:action="@{/login.html}" method="post">
+            <div class="input-group input-group-lg">
+                <span class="input-group-addon"><i class="fa fa-user"></i></span>
+                <input type="text" id="username" name="username" autofocus="autofocus" class="form-control" placeholder="Username">
+            </div>
+            <div class="input-group input-group-lg">
+                <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                <input type="password" id="password" name="password" class="form-control" placeholder="Password">
+            </div>
+            <br>
+            <input type="submit" class="float" value="Log in" />
+        </form>
+        </body>
+    </div>
+</div>
 </html>
+
