--- a/bugTracker/src/main/resources/templates/tester.html
+++ b/bugTracker/src/main/resources/templates/tester.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
-<h1>this is bugtracker tester</h1>
+<h1 style="text-align:center">this is bugtracker tester</h1>
 </body>
 </html>
