Logout fixed, redirected to login

--- a/bugTracker/src/main/resources/templates/tester.html
+++ b/bugTracker/src/main/resources/templates/tester.html
@@ -36,5 +36,10 @@
         </tr>
         </tbody>
     </table>
+
+    <br>
+    <form action="/logout" method="get">
+        <button name="logout" type="submit">Logout</button>
+    </form>
 </body>
 </html>
