--- a/bugTracker/src/main/resources/templates/admin.html
+++ b/bugTracker/src/main/resources/templates/admin.html
@@ -51,6 +51,10 @@
         </tr>
     </tbody>
 </table>
+<br>
+<form action="/logout" method="get">
+    <button name="logout" type="submit">Logout</button>
+</form>
 </body>
 </html>
 
